--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "bootstrap": "^4.5.2",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "jquery": "^3.5.1",
         "nodemailer": "^6.4.11",
+        "popper.js": "^1.16.1",
         "react": "^16.13.1",
         "react-bootstrap": "^1.3.0",
         "react-dom": "^16.13.1",
